Slight style change to ensure tree text is legible

--- a/src/posting/posting.scss
+++ b/src/posting/posting.scss
@@ -242,7 +242,7 @@ TextArea {
 
 Tree {
   & > .tree--cursor {
-    text-style: not dim;
+    text-style: b;
     color: $text;
     background: $panel-lighten-1 70%;
   }
